deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-app
  namespace: hw-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw-app
  template:
    metadata:
      labels:
        app: hw-app
    spec:
      containers:
      - name: hw-app-container
        image: nginx:latest
        ports:
        - containerPort: 80
