service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-app-service
  namespace: hw-namespace
spec:
  type: NodePort
  selector:
    app: hw-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
