ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-app-ingress
  namespace: hw-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hw.redant.fr
    secretName: hw-app-cert
  rules:
  - host: hw.redant.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hw-app-service
            port:
              number: 80
